[package]
name = "pallet-revive-eth-rpc-server"
version = "0.1.0"
authors.workspace = true
edition = "2024"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "The standalone eth-rpc binary for pallet-revive."
default-run = "eth-rpc"
publish = false

[lints]
workspace = true

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[[bin]]
name = "eth-rpc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
pallet-revive-eth-rpc = { workspace = true, default-features = true }
