[package]
name = "revive-gen-metadata"
description = "Generates the revive_chain.scale metadata file used by pallet-revive-eth-rpc."
version = "0.0.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
revive-dev-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
