[package]
name = "pallet-revive-eth-rpc"
version = "0.1.0"
authors.workspace = true
edition = "2024"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "An Ethereum JSON-RPC server for pallet-revive."
default-run = "eth-rpc"

[lints]
workspace = true

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[[bin]]
name = "eth-rpc"
path = "src/main.rs"

[[example]]
name = "tx-types"
required-features = ["subxt"]

[[example]]
name = "transfer"
required-features = ["subxt"]

[[example]]
name = "extrinsic"
required-features = ["subxt"]

[[example]]
name = "remark-extrinsic"
required-features = ["subxt"]

[features]
default = []
# Enable the subxt-backed client for the standalone binary / external RPC usage.
# When this feature is disabled, only the native in-process client path is compiled.
subxt = [
	"dep:subxt",
	"dep:subxt-signer",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
codec = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
log = { workspace = true }
pallet-revive = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
rlp = { workspace = true }
sc-cli = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-rpc = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["alloc", "derive"] }
serde_json = { workspace = true }
sp-api = { workspace = true, default-features = true }
sp-arithmetic = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-crypto-hashing = { workspace = true }
sp-rpc = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-timestamp = { workspace = true }
sp-weights = { workspace = true, default-features = true }
sqlx = { workspace = true, features = ["macros", "runtime-tokio", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Optional
subxt = { workspace = true, default-features = true, features = ["reconnecting-rpc-client"], optional = true }
subxt-signer = { workspace = true, features = ["unstable-eth"], optional = true }

[dev-dependencies]
env_logger = { workspace = true }
pallet-revive-fixtures = { workspace = true, default-features = true }
pretty_assertions = { workspace = true }
sp-io = { workspace = true, default-features = true }
subxt-signer = { workspace = true, features = ["unstable-eth"] }

[build-dependencies]
git2 = { workspace = true }
asset-hub-westend-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
