[package]
name = "revive-dev-runtime"
description = "A solochain dev runtime for revive."
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
array-bytes = { workspace = true }
codec = { workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"] }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-revive = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
parachains-common = { workspace = true }
polkadot-primitives = { workspace = true }
scale-info = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
sp-debug-derive = { workspace = true }
sp-io = { workspace = true, features = ["with-tracing"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame/std",
	"pallet-balances/std",
	"pallet-revive/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"parachains-common/std",
	"polkadot-primitives/std",
	"scale-info/std",
	"serde_json/std",
	"sp-debug-derive/std",
	"sp-io/std",
	"sp-keyring/std",
	"sp-runtime/std",
	"sp-weights/std",
	"substrate-wasm-builder",
]
